@@ -1,3 +1,4 @@
+* Add cron task to reschedule past productions
 * Allow lost_found as output of production
 * Keep cost of unused input products
 * Use the shipment assign wizard for production
